full app commit

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="primary_blue">#573CFA</color>
     <color name="primary_green">#02864A</color>
     <color name="primary_yalow">#FB8D1A</color>
+    <color name="primary_red">#E8083E</color>
 </resources>
